--- a/WebContent/static/kumc/kumc.css
+++ b/WebContent/static/kumc/kumc.css
@@ -58,7 +58,7 @@
 		margin:0px 0px 0px 0px;
 	}
 	h5{
-		color: #444444;
+		color: red;
 		font-size: .65em;
 		font-weight: bold;
 		padding:0px 0px 0px 0px;
