--- a/WebContent/static/kumc/kumc.css
+++ b/WebContent/static/kumc/kumc.css
@@ -164,7 +164,7 @@
 	}
 	#kumc_container{
 		margin: 0 auto;
-		width: 760px;
+		width: 1000px;
 		/* position:relative; */
 		text-align:left;
 		clear:both;
@@ -236,7 +236,7 @@ padding-left: 10px;
 	}
 	 #kumc_header_logo{ 
 		color: #333333;	 
-		width: 250px;
+		width: 350px;
 		float:right;
 		text-align:right;
 		vertical-align:bottom;
@@ -244,7 +244,7 @@ padding-left: 10px;
 	}		
 	#kumc_topmostheader{
 		height:53px;	
-		width: 760px;	
+		width: 1000px;	
 		position: absolute;
 		top:0px;
 		}	
@@ -338,7 +338,7 @@ padding-left: 10px;
 	}	
 	/*************Title Bar **************************************************/								
 	#kumc_titlebar{
-		width:760px;
+		width:1000px;
 		height:28px;
 		clear:both;
 		font-family: Arial, Helvetica, sans-serif;		
@@ -441,7 +441,8 @@ padding-left: 10px;
 	/*************Left************************************************************/				
 	#kumc_contentleft {
 		position:relative;
-		width:151px;
+		width:236px;
+		height:600px;
 		float:left;
 		clear:left;
 		padding:0px;
@@ -467,7 +468,8 @@ padding-left: 10px;
 	}
 	#kumc_contentleft #kumc_leftlinks_bc {
 		padding-top:8px;
-		width:139px;	
+		width:231px;
+		height:615px;	
 		color:#333333;
 		background-color: #EAE9E4;
 	}
@@ -541,7 +543,7 @@ padding-left: 10px;
 	}			
 	#kumc_contentcenter {
 		position:relative;
-		width:608px;
+		width:764px;
 		text-align:left;
 		padding:0px;
 		padding-top:14px;
@@ -599,7 +601,7 @@ padding-left: 10px;
 	#kumc_footer{
 		text-align:center;
 		margin:0 auto;
-		width: 760px;
+		width: 1000px;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size:.6em;
 		color:#333333 !important;
@@ -898,11 +900,11 @@ padding-left: 10px;
 	}
 
 	#kumc_middle_rows_full{
-		width:609px;
+		width:749px;
 		float:left;
 	}
 	.kumc_mr_row_full{
-		width: 609px;
+		width: 749px;
 		padding-top:16px;
 		clear:both;
 	}
@@ -1084,7 +1086,7 @@ table.form td {
 	#kumc_topbar{
 		clear:both;
 		height:8px;		
-		width:95%;
+		width:100%;
 		background-image:none;
 		border-bottom:1px solid #cccccc;
 	}	
