--- a/src/main/webapp/WEB-INF/templates/myChecklist.html
+++ b/src/main/webapp/WEB-INF/templates/myChecklist.html
@@ -5,16 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
+
+	<a href="http://www.antlr.org/wiki/display/ST/Five+minute+Introduction">5 min intro to ST</a>
+
     <h1>HERON Checklist</h1>
     <dl>
     <dt>full name, from LDAP</dt>
     <dd>$fullName$</dd>
     <dt>Title</dt>
-    <dd><em>TODO</em></dd>
+    <dd>$title$</dd>
     <dt>HERON access</dt>
-    <dd>$if(repositoryTool)$<a href="$repositoryTool$">proceed to tool</a>$else$denied$</dd>
+    <dd>$if(repositoryTool)$<a href="$repositoryTool$">proceed to tool</a>$else$denied$endif$</dd>
     <dt>HERON sponsoring</dt>
-    <dd>$if(sponsorshipForm)$<a href="sponsorshipForm">proceed to form</a>$else$denied$</dd>
+    <dd>$if(sponsorshipForm)$<a href="sponsorshipForm">proceed to form</a>$else$denied$endif$</dd>
     </dl>
   </body>
 </html>
