--- a/src/main/webapp/WEB-INF/templates/myChecklist.html
+++ b/src/main/webapp/WEB-INF/templates/myChecklist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>HERON Checklist</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 
@@ -17,11 +17,11 @@
 		<h2>HERON access</h2>
 
 	<form method="post" action="@@todo">
-		$if(repositoryTool)$
+	  <p>$if(repositoryTool)$
 		 <input type="submit" value="Start I2B2" />
 		$else$
 		 <input type="submit" value="Start I2B2" disabled="disabled" />
-        $endif$		
+        $endif$</p>
 	</form>
 
 	<div>
@@ -30,10 +30,19 @@
 	$endif$
 
 <p><label>Human Subjects <a href="@@todo">chalk
-							training</a> complete?<input name="hsc_trained" type="checkbox"
+							training</a> complete?
+
+$if(affiliate.trainingExpired)$
+<input name="hsc_trained" type="checkbox"
 						readonly="readonly"
-						$if(!affiliate.trainingExpired)$ checked="checked" $endif$
-						> </label>
+						/>
+$else$
+<input name="hsc_trained" type="checkbox"
+						readonly="readonly"
+						 checked="checked" 
+						/>
+$endif$
+ </label>
 				</p>
 
 	<p>training expires: $trainingExpiration$</p>
@@ -53,50 +62,47 @@
 
 
 
-		<dd>
 			<ol>
 				<li><label>Human Subjects <a href="@@todo">chalk
 							training</a> complete?<input name="hsc_trained" type="checkbox"
-						readonly="readonly"> </label>
+						readonly="readonly" /> </label>
 				</li>
 				<li>either:
 					<ul>
 						<li><label>Qualified KUMC Faculty? (instructor level
 								or above)? <input name="qualified_faculty" type="checkbox"
-								readonly="readonly"> </label>
+								readonly="readonly" /> </label>
 						</li>
 						<li><label>Sponsored by qualified KUMC faculty? <input
-								name="sponsored" type="checkbox" readonly="readonly"> </label>
+								name="sponsored" type="checkbox" readonly="readonly" /> </label>
 						</li>
 					</ul></li>
 				<li><label>Signed <a href="@@todo">system access
 							agrement</a>? <input name="signed_saa" type="checkbox"
-						readonly="readonly"> </label>
+						readonly="readonly" /> </label>
 				</li>
 			</ol>
 			$if(repositoryTool)$ <a href="$repositoryTool$">proceed to tool</a>
 			$else$ denied for one of the above reasons$endif$
-		</dd>
-		<dt>HERON sponsoring</dt>
-		<dd>
+
+		<h2>HERON sponsoring</h2>
+
 			<ol>
 				<li><label>Qualified Faculty? (instructor level or
 						above)? <input name="qualified_faculty" type="checkbox"
-						readonly="readonly"> </label>
+						readonly="readonly" /> </label>
 				</li>
 				<li><label>Human Subjects <a href="@@todo">chalk
 							training</a> complete?<input name="hsc_trained" type="checkbox"
-						readonly="readonly"> </label>
+						readonly="readonly"/> </label>
 				</li>
 				<li><label>Signed <a href="@@todo">system access
 							agrement</a>? <input name="signed_saa" type="checkbox"
-						readonly="readonly"> </label>
+						readonly="readonly"/> </label>
 				</li>
 			</ol>
 			$if(sponsorshipForm)$ <a href="sponsorshipForm">proceed to form</a>
 			$else$ denied for one of the above reasons $endif$
-		</dd>
-	</dl>
 </body>
 </html>
 
