add simple db query to report1, using sqlalchemy and injector (#600)
--HG--
branch : audit_600

--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -8,7 +8,7 @@
 
 <h1>HERON Usage</h1>
 
-<p>The magic number is: ${magic_number}</p>
+<p>Total queries: ${total_number_of_queries}</p>
 
 <address>
 KUMC BMI
