--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -1,7 +1,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/">
 <py:match path="head" once="true">
-   ${select('title')}
+   ${select('*')}
 
   <link rel="stylesheet" type="text/css" href=
   "https://www.kumc.edu/css/template2009/ku-sec.css" />
