--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -5,19 +5,11 @@
 <xi:include href="kumc_layout.xml" />
 <head>
   <title>HERON Performance</title>
-  <link rel="ack" href="http://mbostock.github.com/d3/tutorial/bar-1.html" />
-</head>
-<body>
-
-<h1>HERON Performance</h1>
-
-<div id="main">
-
-<div id="machine_load">
-<h2>Machine load</h2>
-
-</div>
-
+  <link rel="stylesheet"
+	href="../av/d3LineChart.css" />
+  <link href="../av/tipsy.css" rel="stylesheet" type="text/css" />
+<!-- due to technique for integration with KUMC templates,
+     style in the head gets ignored, so... -->
   <style type="text/css">
 .chart div {
    font: 10px sans-serif;
@@ -28,25 +20,46 @@
    color: white;
 }
   </style>
-  <script src="av/d3.v2.js" type="text/javascript"></script>
+
+</head>
+<body>
+
+<h1>HERON Performance</h1>
+
+<div id="main">
+
+<div id="all_queries"><h2>All Queries</h2>
+</div>
+
+<div id="this_month"><h2>This Month</h2>
+</div>
+
+<div id="all_months"><h2>All Months</h2>
+</div>
+
+<div id="machine_load">
+<h2>Machine load@@@</h2>
+
+</div>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../av/jquery.tipsy.js"></script>
+  <script src="../av/d3.v2.js" type="text/javascript"></script>
+  <script src="../av/perf_chart.js" type="text/javascript"></script>
 <script type="text/javascript">
-var w = 400;
-var durations = [1, 5, 15]; // minutes, per man uptime
-var data = [${
-   ', '.join(['{dur: %d, load: %f}' % (dur, load) for dur, load in machine_load])
-   }];
-var max_load = ${max([load for dur, load in machine_load])};
-var scale = d3.scale.linear().domain([0, max_load * 1.5]).rangeRound([0, w]);
-
-var chart = d3.select("#machine_load").append("div")
-     .attr("class", "chart");
-
- chart.selectAll("div")
-     .data(data)
-   .enter().append("div")
-     .style("width", function(d) { return scale(d.load) + "px"; })
-     .text(function(d) { return d.dur + ' min: ' + d.load; });
+d3.json('query_data', function(data) {
+  draw(d3.select('#all_queries'), data.queries, 'start_date');
+  //draw(data['this_month'], 'start_month');
+});
 </script>
+
+<p>Acks:</p>
+<ul>
+<li><a href="http://bl.ocks.org/1629644">Line chart with tipsy tooltips by mccannf</a></li>
+<li><a rel="ack" href="http://mbostock.github.com/d3/tutorial/bar-1.html" >d3 bar tutorial</a>
+</li>
+</ul>
+
 
 </div>
 
