performance of queries in the last week, with pop-up details
--HG--
branch : perf_1203

--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -28,7 +28,7 @@
 
 <div id="main">
 
-<div id="all_queries"><h2>All Queries</h2>
+<div id="all_queries"><h2>Queries in the last 7 days</h2>
 </div>
 
 <div id="this_month"><h2>This Month</h2>
