note todos in performance report
--HG--
branch : audit_600

--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -28,7 +28,10 @@
 
 <div id="main">
 
-<div id="all_queries"><h2>Queries in the last 7 days</h2>
+<div id="all_queries"><h2>Queries in the last @@ days</h2>
+<p><strong>To-do:</strong> interactive choice of dates, users... perhaps tooltip like..., show result set size. show whether patient set (using colored circle?). select by result set size.
+draw line-per-session. show logins/logouts. show number of users at a given time.
+</p>
 </div>
 
 <div id="this_month"><h2>This Month</h2>
