--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -13,51 +13,26 @@
 <div id="main">
 <p>Total queries: ${total_number_of_queries}</p>
 
-<table><caption>Queries in the last two weeks</caption>
+<table><caption>Queries by user</caption>
 <thead>
  <tr>
   <th>User</th>
-  <th>Queries</th>
- </tr>
-</thead>
-<tbody>
-  <!-- re py:for, see http://genshi.edgewall.org/wiki/Documentation/xml-templates.html#id3 -->
-  <tr py:for="row in query_volume_recent">
-    <td>${row.users}</td>
-    <td>${row.number_of_queries}</td>
-  </tr>
-</tbody>
-</table>
-
-<table><caption>Monthly Usage</caption>
-<thead>
- <tr>
-  <th>User</th>
-  <th>Queries</th>
- </tr>
-</thead>
-<tbody>
-  <!-- re py:for, see http://genshi.edgewall.org/wiki/Documentation/xml-templates.html#id3 -->
-  <tr py:for="row in usage_monthly">
-    <td>${row.user_id}</td>
-    <td>${row.yearmonth}</td>
-    <td>${row.number_of_queries}</td>
-  </tr>
-</tbody>
-</table>
-
-<table><caption>Count of queries by user</caption>
-<thead>
- <tr>
-  <th>User</th>
-  <th>Queries</th>
+  <th>Two Weeks</th>
+  <th>Last Month</th>
+  <th>Last Querter</th>
+  <th>Last Year</th>
+  <th>All Time</th>
  </tr>
 </thead>
 <tbody>
   <!-- re py:for, see http://genshi.edgewall.org/wiki/Documentation/xml-templates.html#id3 -->
   <tr py:for="row in query_volume">
-    <td>${row.users}</td>
-    <td>${row.number_of_queries}</td>
+    <td>${row.full_name}</td>
+    <td>${row.two_weeks}</td>
+    <td>${row.last_month}</td>
+    <td>${row.last_quarter}</td>
+    <td>${row.last_year}</td>
+    <td>${row.all_time}</td>
   </tr>
 </tbody>
 </table>
