add note about tooltips for query concepts (#600)
--HG--
branch : audit_600

--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -34,7 +34,10 @@
 </table>
 
 <div class="detail">
+
 <h2>Detail</h2>
+<p><em>Hover over term names for more context.</em></p>
+
 <div py:for="qid, gen in detail">
   <div py:with="rows = list(gen)" py:strip="True">
     <h3 id="qm_${qid}">
