usage reports are linked from HERON main page (#600)   - Oversight section is only shown to DROC members
--HG--
branch : audit_600

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -19,6 +19,9 @@
       <button disabled="disabled"
 	 >Start Query Tool</button>
     </li>
+    <li>
+      <a href="reports/usage">Usage Report</a>
+    </li>
   </ul>
   </div>
 
@@ -42,9 +45,10 @@
   </ul>
   </div>
 
-  <div class="header png"><h3>Oversight</h3>
+  <div py:if="droc" class="header png"><h3>Oversight</h3>
   <ul>
-    <li><a href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238">DROC Oversight Tools</a></li>
+    <li><a href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238">DROC Review Forms</a></li>
+    <li><a href="reports/usage_small">Usage Audit Report</a></li>
   </ul>
   </div>
   </div>
