--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -12,7 +12,11 @@
 
 <div id="main">
 
-<table><caption>Summary</caption>
+<h2>Summary</h2>
+
+<p><em>In the past 45 days, the following queries
+for patient sets had small (&lt;= 15) result sets:</em></p>
+<table>
 <thead>
  <tr>
   <th>User</th>
