- align heron-admin session privileges with session cookies, cache   - add session factory; invalidate in CAS logout view   - only issue req.agent; no more .user, .faculty, .executive     - the only cas_auth.Issuer is HeronRecords; no more MedCenter.issue()       - moved MockRequest from medcenter to heron_policy       - updated medcenter integration test     - request.agent can't directly ensure_oversight_request();       make sure it's faculty by using agent.oversight_request()     - use req.agent.cn rather than req.user.badge.cn     - OversightCommittee is no longer an issuer   - never mind half-hearted attempt to use closures in HeronRecords     - moved I2B2Account() closer to I2B2PM     - moved class Browser out of HeronRecords to medcenter     - folded Record into Affiliate   - agent.sponsor() may return True or 1 due to caching   - repr() of Affiliate no longer depends on LDAP lookup; only cn   - move OversightCommittee before HeronRecords for injection (grumble)   - log LDAP access - move remainder of checklist from admin_lib layer to heron_srv web layer   - reverse sense of accessDisabled template var to repositoryAccess
--HG--
branch : session_cache

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -11,11 +11,11 @@
   <div id="menu">
   <div class="header png"><h3>i2b2 Query and Analysis Tool</h3>
   <ul>
-    <li py:if="'disabled' not in accessDisabled">
+    <li py:if="'checked' in repositoryAccess">
       <a href="${i2b2_login_path}"
 	 >Start Query Tool</a>
     </li>
-    <li py:if="'disabled' in accessDisabled">
+    <li py:if="'checked' not in repositoryAccess">
       <button disabled="disabled"
 	 >Start Query Tool</button>
     </li>
