--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -12,7 +12,6 @@
 
 <div id="main">
 
-
 <h2>Summary</h2>
 
 <p><em>In the past 45 days, the following queries
@@ -59,6 +58,8 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 </div>
 
 </div>
+
+<a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&query_id=4">DROC Requests and Sponsorees</a>
 
 </body>
 </html>
