Fixed a syntax error
There was an error resulting from an "&" symbol in the linked URL; as per Dan's suggestion, I changed it to "&amp"

--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -59,7 +59,7 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 
 </div>
 
-<a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&query_id=4">DROC Requests and Sponsorees</a>
+<a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&ampquery_id=4">DROC Requests and Sponsorees</a>
 
 </body>
 </html>
