--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -40,8 +40,7 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 <div class="detail">
 
 <h2>Detail</h2>
-<p><em>Hover over term names for more context.</em></p>
-
+<p><em>See <a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&amp;query_id=4">Sponsor Report</a> for list of sponsored individuals and their research areas.  Hover over term names for more context.  </em></p>
 <div py:for="qid, gen in detail">
   <div py:with="rows = list(gen)" py:strip="True">
     <h3 id="qm_${qid}">
@@ -59,7 +58,6 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 
 </div>
 
-<a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&amp;query_id=4">DROC Requests and Sponsorees</a>
 
 </body>
 </html>
