Fixed broken link to the kumc events calendar

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -106,8 +106,7 @@
   The clinic is a brainstorming session and an education forum for
   investigators and informatics to share knowledge, provide feedback,
   and optimize the use of systems.  <em>See the <a
-  href="http://www2.kumc.edu/webevent/scripts/webevent.plx?userid=guest;cmd=list2week;token=guest.ee19ab01eb2b074dd595327c2d334d04"
-  >KUMC Calendar</a> for the date of the next clinic.</em>
+  href="http://www.kumc.edu/events-calendar.html">KUMC Calendar</a> for the date of the next clinic.</em>
 </p>
 
   <p>To set up consultation regarding your project, complete an
