Corrected wording from last year to 365 days

--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -63,7 +63,7 @@ td {border-right: 1px solid #CCC;}
   <th>Two Weeks</th>
   <th>Last Month</th>
   <th>Last Quarter</th>
-  <th>Last Year</th>
+  <th>Last 365 Days</th>
   <th>All Time</th>
  </tr>
 </thead>
