Changed HERON to a link (ticket #1205)

--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -96,7 +96,7 @@
 	  <div id="toptabnav">
 	    <p><a href="http://www.kumc.edu/">KUMC Home</a>&#160;&gt;&#160;<a
 	    href="http://frontiers.kumc.edu/">Frontiers</a
-	>&#160;&gt;&#160;HERON
+	>&#160;&gt;&#160;<a href="https://heron.kumc.edu">HERON</a>
 	    </p>
 	  </div>
 	</div>
