oops... create date was missing in query_status report (#1203)

--- a/heron_wsgi/templates/query_status.html
+++ b/heron_wsgi/templates/query_status.html
@@ -69,6 +69,7 @@ td {border-right: 1px solid #CCC;}
     <td>${row.entry_date}</td>
     <td>${row.name}</td>
     <td>${row.result_type}</td>
+    <td>${row.create_date}</td>
     <td>${row.batch_mode}</td>
     <td>${row.status}</td>
   </tr>
