Note about VPN access for newly sponsored users.

--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -21,6 +21,11 @@ ${'approved' if approved else 'rejected'}
   <p>They may log in to <a href="${heron_home}">HERON</a>
   (<code>${heron_home}</code>).</p>
 
+  <p><strong>Note:</strong> For access from outside the KUMC network,
+  a <a href=
+  "http://www.kumc.edu/information-resources/virtual-private-network.html"
+  >KUMC VPN connection</a> is required.</p>
+
   <p>They will be required to sign a system access agreement if they
   have not already done so for another project.</p>
 
