new training links to the frontiers site (#1276).  Added info about databases (#1286)

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -28,7 +28,7 @@
   <div class="header png"><h3>Training Materials</h3>
   <ul>
     <li><a href=
-	"http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials"
+	"http://frontiersresearch.org/frontiers/HERON-Introduction"
 	>HERON Access</a>
     </li>
   </ul>
@@ -68,8 +68,8 @@
   <!-- TODO: why does this para turn blue? -->
   <p>HERON (Healthcare Enterprise Repository for Ontological Narration)
   allows you to explore de-identified data from Epic/O2 (the
-  hospital electronic medical records) and IDX (the clinical billing
-  system).
+  hospital electronic medical records), IDX (the clinical billing
+  system), KU Hospital Cancer Registry, KU Biospecimen Repository, REDCap (selected projects), Social Security Death Index, and University HealthSystem Consortium (Quality Measure Data).
   </p>
 
   <p>The HERON i2b2 Query and Analysis Tool
@@ -83,16 +83,16 @@
   a system access agreement is the only requirement.</p>
 
   <p>The <a href=
-	"http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials"
+	"http://frontiersresearch.org/frontiers/HERON-Introduction"
 	>HERON Access guide</a> explains the process in detail.
   </p>
 
   <p>A Data Request Oversight Committee (DROC) oversees requests to:</p>
   <ul>
-    <li><a href="http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials/SponsoringUsers">sponsor
+    <li><a href="http://frontiersresearch.org/frontiers/heron-sponsorship">sponsor
     collaborators and research team members</a></li>
 
-    <li><a href="http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials/DataAccess">extract
+    <li><a href="http://frontiersresearch.org/frontiers/data-set-instructions">extract
     data sets</a></li>
   </ul>
 
@@ -110,8 +110,8 @@
 </p>
 
   <p>To set up consultation regarding your project, complete an
-  <a href="http://biostat-pts.kumc.edu/eres/jsp/kumcpr.jsp"
-     >Informatics Project Request</a>.
+  <a href="http://frontiersresearch.org/reqroute/services/request_type/2"
+     >Informatics Project Request</a> (check Informatics project).
   </p>
   </div>
   
