--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -42,6 +42,8 @@
     <li><a href="${data_use_path}">HERON
     Data Usage Request</a>
     </li>
+	<li><a href="https://redcap.kumc.edu/surveys/?s=wEkGLU">Frontiers Participant Registry Request</a>
+	</li>
   </ul>
   </div>
 
