added link to training videos and changed some wording for help page links

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -29,8 +29,10 @@
   <ul>
     <li><a href=
 	"http://frontiersresearch.org/frontiers/HERON-Introduction"
-	>HERON Access</a>
+	>HERON Help</a>
     </li>
+	<li><a href="http://frontiersresearch.org/frontiers/informatics-training-videos">Training Videos</a>
+	</li>
   </ul>
   </div>
 
@@ -84,9 +86,9 @@
   <em>view-only</em> access to do patient count queries, executing
   a system access agreement is the only requirement.</p>
 
-  <p>The <a href=
+  <p>Visit the <a href=
 	"http://frontiersresearch.org/frontiers/HERON-Introduction"
-	>HERON Access guide</a> explains the process in detail.
+	>help page</a> or view <a href="http://frontiersresearch.org/frontiers/informatics-training-videos">training videos</a> for more information on accessing and searching HERON.
   </p>
 
   <p>A Data Request Oversight Committee (DROC) oversees requests to:</p>
