Change link name for HERON usage report as per request from Russ.

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -20,7 +20,7 @@
 	 >Start Query Tool</button>
     </li>
     <li>
-      <a href="reports/usage">Usage Report</a>
+      <a href="reports/usage">Who's Using HERON?</a>
     </li>
   </ul>
   </div>
