add closing p tag, since the template library requires well-formed XML (#1825)

--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -21,7 +21,7 @@ ${'approved' if approved else 'rejected'}
   <p>They may log in to <a href="${heron_home}">HERON</a>
   (<code>${heron_home}</code>).</p>
   
-  <p>Visit the  <a href="frontiersresearch.org/frontiers/HERON-Introduction">HERON help page</a> or view <a href="http://frontiersresearch.org/frontiers/informatics-training-videos">HERON training videos</a> for more information on accessing and searching HERON. 
+  <p>Visit the  <a href="frontiersresearch.org/frontiers/HERON-Introduction">HERON help page</a> or view <a href="http://frontiersresearch.org/frontiers/informatics-training-videos">HERON training videos</a> for more information on accessing and searching HERON.</p>
 
   <p><strong>Note:</strong> For access from outside the KUMC network,
   a <a href=
