add research title, description to DROC audit report (#1685)   - show_small_set_report gives sponsorships to report2.html template     - DecisionRecords.about_sponsorships() gives research project title etc.     - oversight_decisions leaves project id implicit in return value     - move DecisionRecords from heron_policy to notice_log     - PERM_DROC implies context.decision_records   - fix mock_redcap.sql loading to be independent of cwd
--HG--
branch : ocap_sc

--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -44,13 +44,26 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 <div py:for="qid, gen in detail">
   <div py:with="rows = list(gen)" py:strip="True">
     <h3 id="qm_${qid}">
-     #${qid} ${rows[0].query_name}</h3>
+     #${qid} ${rows[0].query_name} by ${rows[0].user_id}</h3>
 
     <ul>
       <li py:for="c in rows">
         <abbr title="${c.tooltip}">${c.item_name}</abbr>
       </li>
     </ul>
+
+    <div py:with="projects = sponsorships[rows[0].user_id]" py:strip="True">
+      <div py:if="projects">
+	<h4>Research Projects</h4>
+	<ul>
+	  <li py:for="inv, title, description in projects">
+	    <cite>${title}</cite><br />
+	    sponsored by <strong>${inv.full_name()}</strong><br />
+	    <blockquote>${description}</blockquote>
+	  </li>
+	  </ul>
+      </div>
+    </div>
   </div>
 </div>
 
