--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -39,27 +39,27 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 
 <div class="detail">
 
-<h2>Detail</h2>
-<p><em>See <a href="https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&amp;query_id=4">Sponsor Report</a> for list of sponsored individuals and their research areas.  Hover over term names for more context.  </em></p>
+<h2>Query Details</h2>
+<p><em>Hover over term names for more context.</em></p>
 <div py:for="qid, gen in detail">
   <div py:with="rows = list(gen)" py:strip="True">
     <h3 id="qm_${qid}">
-     #${qid} ${rows[0].query_name} by ${rows[0].user_id}</h3>
+     Query #${qid} ${rows[0].query_name} by ${rows[0].user_id}</h3>
 
+    <p>Query terms:</p>
     <ul>
       <li py:for="c in rows">
         <abbr title="${c.tooltip}">${c.item_name}</abbr>
       </li>
     </ul>
 
-    <div py:with="projects = sponsorships[rows[0].user_id]" py:strip="True">
-      <div py:if="projects">
-	<h4>Research Projects</h4>
+    <div py:with="my_projects = sponsorships[rows[0].user_id]" py:strip="True">
+      <div py:if="my_projects">
+	<p>${rows[0].user_id} is sponsored in these projects:</p>
 	<ul>
-	  <li py:for="inv, title, description in projects">
-	    <cite>${title}</cite><br />
-	    sponsored by <strong>${inv.full_name()}</strong><br />
-	    <blockquote>${description}</blockquote>
+	  <li py:for="record, inv, title, description in my_projects">
+	    #${record} <a href="#project_${record}">${title}</a>
+	    sponsored by <strong>${inv.full_name()}</strong>
 	  </li>
 	  </ul>
       </div>
@@ -69,8 +69,23 @@ for patient sets had small (&lt;= 15) result sets:</em></p>
 
 </div>
 
+<div><h2>Project Details</h2>
+
+  <p><em>from <a href=
+  "https://redcap.kumc.edu/redcap_v4.7.0/Reports/report.php?pid=238&amp;query_id=4"
+  >HERON Oversight Data</a></em></p>
+
+  <ul>
+    <li py:for="record, (inv, title, description) in projects"
+        id="project_${record}">
+      <strong>#${record}</strong>: <cite>${title}</cite>
+      <br />sponsored by <strong>${inv.full_name()}</strong>
+      <blockquote>${description}</blockquote>
+    </li>
+  </ul>
 </div>
 
+</div>
 
 </body>
 </html>
