Added HERON mailing list and archive link.

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -185,7 +185,8 @@
   </div>
   <div class="content png">
     <ul>
-      <li><a href="https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1">Gripe/Praise</a></li>
+      <li>Let us know what you think: <a href="https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1">Gripe/Praise</a></li>
+	  <li>Send a question to the <a href="mailto:HERON-USERS@LISTSERV.KUMC.EDU">HERON User Group</a> or review the <a href="http://listserv.kumc.edu/cgi-bin/wa?A0=HERON-USERS">mailing list archive.</a></li>
     </ul>
   </div>
 
