--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -30,6 +30,36 @@
 
 <div id="main">
 
+<p>Current release: <strong>${current_release}</strong></p>
+
+<div id="recent_queries"><h2>Performance of Recent Queries</h2>
+
+<table>
+  <thead>
+  <tr>
+    <th>ID</th>
+    <th>Name</th>
+    <th>User</th>
+    <th>Status</th>
+    <th>Create Date</th>
+    <th>Elapsed</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr py:for="q in recent_query_performance">
+    <td>${q.query_master_id}</td>
+    <td>${q.name}</td>
+    <td>${q.user_id}</td>
+    <td>${q.status}
+        ${q.batch_mode}</td>
+    <td>${q.create_date}</td>
+    <td>${q.elapsed}</td>
+    <td>${'*' * int(1 + log(1 + q.elapsed.seconds))}</td>
+  </tr>
+  </tbody>
+</table>
+</div>
+
 <div id="all_queries"><h2>Queries in the last @@ days</h2>
 
 <form id='constraints'>
@@ -92,7 +122,7 @@ function update() {
 }
 
 $('#update').click(update);
-update();
+//@@ update();
 
 </script>
 
